--- a/devoctomy.Passchamp.Client/Pages/VaultEditorPage.xaml
+++ b/devoctomy.Passchamp.Client/Pages/VaultEditorPage.xaml
@@ -36,5 +36,16 @@
                          Command="{Binding OkCommand}">
             </ImageButton>
         </Grid>
+        <VerticalStackLayout
+            Margin="8"
+            Grid.Row="1">
+            <Label Text="Cloud Provider" Style="{StaticResource MediumLabelStyle}" HorizontalTextAlignment="Start"></Label>
+            <Picker
+                MaximumWidthRequest="300"
+                WidthRequest="300"
+                HorizontalOptions="Start"
+                ItemsSource="{Binding CloudStorageProviderConfigRefs}">
+            </Picker>
+        </VerticalStackLayout>
     </Grid>
 </pages:BasePage>
