chore: started refactoring page hierachy  to allow for different page types.

--- a/devoctomy.Passchamp.Client/Pages/AboutPage.xaml
+++ b/devoctomy.Passchamp.Client/Pages/AboutPage.xaml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<pages:BasePage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<pages:BaseContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pages="clr-namespace:devoctomy.Passchamp.Client.Pages.Base"
              x:Class="devoctomy.Passchamp.Client.Pages.AboutPage"
              Title="About Passchamp">
     <VerticalStackLayout>
     </VerticalStackLayout>
-</pages:BasePage>
+</pages:BaseContentPage>
