--- a/devoctomy.Passchamp.Client/Pages/VaultEditorPage.xaml
+++ b/devoctomy.Passchamp.Client/Pages/VaultEditorPage.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<pages:BasePage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<pages:BaseContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:pages="clr-namespace:devoctomy.Passchamp.Client.Pages.Base"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:devoctomy.Passchamp.Client.ViewModels;assembly=devoctomy.Passchamp.Client"
@@ -48,4 +48,4 @@
             </Picker>
         </VerticalStackLayout>
     </Grid>
-</pages:BasePage>
+</pages:BaseContentPage>
