chore: Added tabs to vault editor page and fixed an issue with overlapping window title text

--- a/devoctomy.Passchamp.Client/Pages/AppShellPage.xaml
+++ b/devoctomy.Passchamp.Client/Pages/AppShellPage.xaml
@@ -11,7 +11,8 @@
     Shell.FlyoutBehavior="Flyout"
     x:DataType="vm:AppShellViewModel"
     x:TypeArguments="vm:AppShellViewModel"
-    x:Name="shell">
+    x:Name="shell"
+    Title="">
     <Shell.FlyoutHeaderTemplate>
         <DataTemplate>
             <Grid HeightRequest="200">
