--- a/devoctomy.Passchamp.Client/Pages/VaultEditorPage.xaml
+++ b/devoctomy.Passchamp.Client/Pages/VaultEditorPage.xaml
@@ -36,7 +36,22 @@
                          Command="{Binding OkCommand}">
             </ImageButton>
         </Grid>
-        <VerticalStackLayout
+        <controls:TabView Grid.Row="1"
+                          SelectedTabAccentColour="{StaticResource White}"
+                          TabAccentColour="{StaticResource Primary}"
+                          TabBackColour="{StaticResource Primary}"
+                          SelectedTabBackColour="{StaticResource Primary}">
+            <controls:TabView.TabPages>
+                <controls:TabViewPage
+                    Title="INFO"
+                    IsSelected="True"/>
+                <controls:TabViewPage
+                    Title="SECURITY" />
+                <controls:TabViewPage
+                    Title="SYNC" />                
+            </controls:TabView.TabPages>
+        </controls:TabView>
+        <!--<VerticalStackLayout
             Margin="8"
             Grid.Row="1">
             <Label Text="Cloud Provider" Style="{StaticResource MediumLabelStyle}" HorizontalTextAlignment="Start"></Label>
@@ -46,6 +61,6 @@
                 HorizontalOptions="Start"
                 ItemsSource="{Binding CloudStorageProviderConfigRefs}">
             </Picker>
-        </VerticalStackLayout>
+        </VerticalStackLayout>-->
     </Grid>
 </pages:BaseContentPage>
