--- a/devoctomy.Passchamp.Client/Pages/VaultEditorPage.xaml
+++ b/devoctomy.Passchamp.Client/Pages/VaultEditorPage.xaml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <pages:BaseContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:pages="clr-namespace:devoctomy.Passchamp.Client.Pages.Base"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:vm="clr-namespace:devoctomy.Passchamp.Client.ViewModels;assembly=devoctomy.Passchamp.Client"
-             xmlns:controls="clr-namespace:devoctomy.Passchamp.Client.Controls;assembly=devoctomy.Passchamp.Client"
-             x:Class="devoctomy.Passchamp.Client.Pages.VaultEditorPage"
-             Title="VaultEditorPage"
-             x:DataType="vm:VaultEditorViewModel"
-             x:TypeArguments="vm:VaultEditorViewModel">
+                       xmlns:pages="clr-namespace:devoctomy.Passchamp.Client.Pages.Base"
+                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                       xmlns:vm="clr-namespace:devoctomy.Passchamp.Client.ViewModels;assembly=devoctomy.Passchamp.Client"
+                       xmlns:controls="clr-namespace:devoctomy.Passchamp.Client.Controls;assembly=devoctomy.Passchamp.Client"
+                       xmlns:views="clr-namespace:devoctomy.Passchamp.Client.Views"
+                       x:Class="devoctomy.Passchamp.Client.Pages.VaultEditorPage"
+                       Title="VaultEditorPage"
+                       x:DataType="vm:VaultEditorViewModel"
+                       x:TypeArguments="vm:VaultEditorViewModel">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="48"></RowDefinition>
@@ -44,6 +45,8 @@
             <controls:TabView.TabPages>
                 <controls:TabViewPage
                     Title="INFO"
+                    ContentType="{x:Type views:VaultInfoView}"
+                    ViewModelPropertyName="InfoViewModel"
                     IsSelected="True"/>
                 <controls:TabViewPage
                     Title="SECURITY" />
