--- a/devoctomy.Passchamp.Client/Views/VaultInfoView.xaml
+++ b/devoctomy.Passchamp.Client/Views/VaultInfoView.xaml
@@ -7,9 +7,9 @@
                     x:DataType="vm:VaultInfoViewModel"
                     x:TypeArguments="vm:VaultInfoViewModel">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <Label Text="Name" Style="{StaticResource MediumLabelStyle}" HorizontalTextAlignment="Start"></Label>
+        <Entry Text="{Binding Name, Mode=TwoWay}"></Entry>
+        <Label Text="Description (Optional)" Style="{StaticResource MediumLabelStyle}" HorizontalTextAlignment="Start"></Label>
+        <Entry Text="{Binding Description, Mode=TwoWay}"></Entry>
     </VerticalStackLayout>
 </baseviews:BaseView>
