chore: created vault page which is now navigated to, containing single shell option of 'lock vault'

--- a/devoctomy.Passchamp.Client/Pages/AppShellPage.xaml
+++ b/devoctomy.Passchamp.Client/Pages/AppShellPage.xaml
@@ -28,6 +28,12 @@
         <ShellContent ContentTemplate="{DataTemplate pages:VaultsPage}" />
     </FlyoutItem>
 
+    <FlyoutItem Title="Vault"
+                Route="Vault"
+                FlyoutItemIsVisible="False">
+        <ShellContent ContentTemplate="{DataTemplate pages:VaultPage}" />
+    </FlyoutItem>
+
     <FlyoutItem Title="Settings"
                 Route="Settings"
                 FlyoutItemIsVisible="False">
