--- a/devoctomy.Passchamp.Client/Pages/CredentialEditorPage.xaml
+++ b/devoctomy.Passchamp.Client/Pages/CredentialEditorPage.xaml
@@ -35,5 +35,10 @@
                          Command="{Binding OkCommand}">
             </ImageButton>
         </Grid>
+        <ScrollView Grid.Row="1">
+            <VerticalStackLayout>
+                
+            </VerticalStackLayout>
+        </ScrollView>
     </Grid>
 </pages:BaseContentPage>
